--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "axis": "^1.0.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.4.0",
     "vue-router": "^3.0.1"
